--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "AWS lambda updater",
   "main": "index.js",
   "scripts": {
+    "build": "ncc -m -s build index.js -o dist",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "ConvergeStack",
@@ -13,6 +14,7 @@
     "@aws-sdk/client-lambda": "^3.309.0"
   },
   "devDependencies": {
+    "@vercel/ncc": "^0.36.1",
     "standard": "^17.0.0"
   }
 }
